# actix-sample-api

./: .dockerignore  .gitignore  .gitlab.ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/handlers/: lib.rs  load_decode_image.rs  load_image.rs  load_image_by_url.rs  mod.rs  save_encode_image.rs  save_file.rs
static/: 404.html  welcome.html
