[package]
name = "actix-sample-api"
version = "0.1.0"
authors = ["Ernest Khasanzhinov <khasanzhinov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.2.0"
actix-session = "0.3.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-files = "0.2.1"

base64 = "0.12.3"
env_logger = "0.7"
futures = "0.3.1"
sanitize-filename = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
image = "0.19.0"
log = "0.4.8"
tempfile = "3.1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }